--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^6.2.8",
     "next": "^12.1.1-canary.6",
     "node-sass": "^7.0.1",
     "react": "17.0.2",
